==============
lxml changelog
==============

Under development
=================

Features added
--------------

Bugs fixed
----------

* Potential threading problem in XInclude.

* Crash in Element class lookup classes when the __init__() method of
  the super class is not called from Python subclasses.

Other changes
-------------

* Non-ASCII characters in attribute values are no longer escaped on
  serialisation.


2.0.6 (2008-05-31)
==================

Features added
--------------

Bugs fixed
----------

* Incorrect evaluation of ``el.find("tag[child]")``.

* Windows build was broken.

* Moving a subtree from a document created in one thread into a
  document of another thread could crash when the rest of the source
  document is deleted while the subtree is still in use.

* Rare crash when serialising to a file object with certain encodings.

Other changes
-------------

* lxml should now build without problems on MacOS-X.


2.0.5 (2008-05-01)
==================

Features added
--------------

Bugs fixed
----------

* Resolving to a filename in custom resolvers didn't work.

* lxml did not honour libxslt's second error state "STOPPED", which
  let some XSLT errors pass silently.

* Memory leak in Schematron with libxml2 >= 2.6.31.

Other changes
-------------


2.0.4 (2008-04-13)
==================

Features added
--------------

Bugs fixed
----------

* Hanging thread in conjunction with GTK threading.

* Crash bug in iterparse when moving elements into other documents.

* HTML elements' ``.cssselect()`` method was broken.

* ``ElementTree.find*()`` didn't accept QName objects.

Other changes
-------------


2.0.3 (2008-03-26)
==================

Features added
--------------

* soupparser.parse() allows passing keyword arguments on to
  BeautifulSoup.

* ``fromstring()`` method in ``lxml.html.soupparser``.

Bugs fixed
----------

* ``lxml.html.diff`` didn't treat empty tags properly (e.g.,
  ``<br>``).
