@@ -8,8 +8,12 @@ Under development
 Features added
 --------------
 
+* Pickling ``ElementTree`` objects in lxml.objectify.
+
 Bugs fixed
 ----------
+
+* ``ElementTree.parse()`` didn't handle target parser result.
 
 * Potential threading problem in XInclude.
 
